--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Podcast Page</title>
-
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <style>
         body {
             font-family: Arial, sans-serif;
