--- a/index.html
+++ b/index.html
@@ -6,64 +6,68 @@
     <title>Podcast Page</title>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
-            padding: 20px;
-        }
+        
 
-        .podcast-container {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-            max-width: 900px;
-            margin: auto;
-        }
+        <style>
+    body {
+        font-family: Arial, sans-serif;
+        background: #f4f4f4;
+        padding: 20px;
+    }
 
-        .podcast {
-            position: relative;
-            background: white;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            text-align: center;
-        }
+    .podcast-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        max-width: 900px;
+        margin: auto;
+    }
 
-        .podcast img {
-            width: 100%;
-            height: 250px;
-            object-fit: cover; /* FIXED IMAGE FITTING */
-            display: block;
-        }
+    .podcast {
+        background: white;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        text-align: center;
+        transition: transform 0.2s ease;
+    }
 
-        /* Hover overlay style */
-        .description {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 250px;
-            background: rgba(0,0,0,0.55);
-            color: white;
-            font-size: 18px;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            padding: 20px;
-            text-align: center;
-        }
+    .podcast:hover {
+        transform: scale(1.03);
+    }
 
-        .podcast:hover .description {
-            opacity: 1;
-        }
+    .podcast img {
+        width: 100%;
+        height: 300px;        /* NEW FIXED HEIGHT */
+        object-fit: cover;    /* Crops to fit perfectly */
+        display: block;
+    }
 
-        audio {
-            width: 90%;
-            margin: 12px 0 18px 0;
-        }
+    .description {
+        display: none;
+        padding: 15px;
+        font-size: 15px;
+    }
+
+    .podcast:hover img {
+        opacity: 0.25;
+    }
+
+    .podcast:hover .description {
+        display: block;
+        margin-top: -260px;
+        color: black;
+        font-weight: bold;
+        background: rgba(255,255,255,0.9);
+        padding: 20px;
+    }
+
+    audio {
+        width: 90%;
+        margin-bottom: 15px;
+    }
+</style>
+
     </style>
 </head>
 <body>
